apps/convertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convertx
  namespace: convertx
spec:
  selector:
    app.kubernetes.io/name: convertx
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
